--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 #btn{
     background-color: black;
-    color: #fff;
+    color: white;
     border-radius: 5px;
 }
 #btn:hover{
     background-color: yellow;
-    color: #000;
+    color: black;
     border-radius: 30px;
 }
 /* Your CSS Code here. */
