--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 #btn{
     background-color: black;
+    border: none;
     color: white;
     border-radius: 5px;
 }
 #btn:hover{
     background-color: yellow;
+    border: none;
     color: black;
     border-radius: 30px;
 }
